--- a/.env
+++ b/.env
@@ -1,3 +1,1 @@
-GROQ_API_KEY="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"
-# TAVILY_API_KEY="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"
-# HUGGINGFACE_API_KEY="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"
+GROQ_API_KEY="add your own api"
